Correct alignment of call to action box
Add correct flex alignment rather than relying on
a gap

--- a/style/style.css
+++ b/style/style.css
@@ -185,14 +185,14 @@ a:link {
 
 .call-to-action {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   background-color: #3882f6;
   width: 800px;
   height: 100px;
   border-radius: 5px;
   padding: 30px;
-  gap: 150px;
+  gap: 15px;
 }
 
 .call-text {
